config.json: updated email in contacts

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -79,7 +79,7 @@
             "title": "Contact details",
             "phoneNumber": "850-123-5021",
             "phoneAltText": "My phone number",
-            "email": "thisismyemail.@myemail.me",
+            "email": "",
             "emailAltText": "My email",
             "address": "",
             "addressAltText": "My address"
