--- a/content/data/config.json
+++ b/content/data/config.json
@@ -71,7 +71,7 @@
                 "type": "Link",
                 "label": "GitHub",
                 "url": "https://github.com/ace97",
-                "altText": "Netlify templates"
+                "altText": "GitHub"
             }
         ],
         "contacts": {
