--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,7 +32,7 @@
                 "type": "Link",
                 "label": "Blog",
                 "url": "/blog",
-                "showIcon": true
+                "showIcon": false
             }
         ],
         "socialLinks": [
