--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,7 +21,7 @@
             {
                 "type": "Link",
                 "label": "About Me",
-                "url": "/info"
+                "url": "/about-me"
             },
             {
                 "type": "Link",
